--- a/auth-service.properties
+++ b/auth-service.properties
@@ -4,3 +4,6 @@ auth.params.c2=2250
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/db_auth?charSet=LATIN1
 spring.datasource.username=postgres
 spring.datasource.password=sylla
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
