--- a/cart-service.properties
+++ b/cart-service.properties
@@ -4,3 +4,6 @@ cart.params.c2=225
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/db_cart?charSet=LATIN1
 spring.datasource.username=postgres
 spring.datasource.password=sylla
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
