--- a/product-service.properties
+++ b/product-service.properties
@@ -1,4 +1,4 @@
 pro.params.p1=34
 pro.params.p2=22
 
-spring.data.mongodb.url =mongodb://localhost/db_product
+spring.data.mongodb.uri =mongodb://localhost/db_product
