--- a/product-service.properties
+++ b/product-service.properties
@@ -1,4 +1,3 @@
 pro.params.p1=34
 pro.params.p2=22
-
-spring.data.mongodb.uri =mongodb://localhost/dbproduct
+spring.data.mongodb.uri =mongodb://localhost/Dbproduct
