--- a/cart-service.properties
+++ b/cart-service.properties
@@ -2,8 +2,8 @@ cart.params.c1=342
 cart.params.c2=225
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/db_cart?charSet=LATIN1
-spring.datasource.username=postgres
-spring.datasource.password=sylla
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.username=postgres
+#spring.datasource.password=sylla
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=update
