--- a/product-service.properties
+++ b/product-service.properties
@@ -1,3 +1,4 @@
 pro.params.p1=34
 pro.params.p2=22
-spring.data.mongodb.uri =mongodb://localhost/Dbproduct
+#spring.data.mongodb.uri =mongodb://localhost/Dbproduct
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/db_product?charSet=LATIN1
