--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,9 @@
 global.params.x=433
 global.params.y=422
+
+#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/db_cart?charSet=LATIN1
+spring.datasource.username=postgres
+spring.datasource.password=sylla
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
