--- a/application.properties
+++ b/application.properties
@@ -6,4 +6,4 @@ spring.datasource.username=postgres
 spring.datasource.password=sylla
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
